Added personal blog navigation

--- a/About Me.html
+++ b/About Me.html
@@ -5,7 +5,7 @@
 <h1>Sythong Run</h1>
 <body>
 <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
-<a href="Reviews.html"> <button>Reviews</button></a>
+<a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
 <p>Hello this is my introduction page. You will learn a few things about me and my website.
 The research tab features my current research and research interest. Reviews is where I discuss
 books I've read and podcast I've listened to. And Personal blog is where I will take you on my
