--- a/Personal Blog.html
+++ b/Personal Blog.html
@@ -6,7 +6,7 @@
 <body>
 <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
 <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
-<p> Books and podcasts reviews go here.
+<p> Personal blog. life updates. 
 </p>
 
 </body>
