--- a/Research.html
+++ b/Research.html
@@ -5,7 +5,7 @@
 <h1>Sythong Run</h1>
 <body>
 <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
- <a href="Reviews.html"> <button>Reviews</button></a>
+ <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
 <p> This is where I talk about my current research and my research interest. My current interests include
 sexual health, sexuality, disabilities, and waterborne illnesses.
 </p>
