inline name "sythong run" align menu buttons to right side of the page

--- a/Reviews.html
+++ b/Reviews.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 <title>Sythong Run</title>
-<h1>Sythong Run</h1>
+</head>
 <body>
-<a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
-<a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
+<h1 style="display: inline;">Sythong Run</h1>
+
+<style>
+    .menu{
+        float: right;
+        font-family: verdana;  
+    }
+</style>
+    <div class="menu">
+        <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
+        <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
+    </div>
 <p> Books and podcasts reviews go here.
 </p>
 
