--- a/Research.html
+++ b/Research.html
@@ -2,11 +2,22 @@
 <html>
 <head>
 <title>Sythong Run</title>
-<h1>Sythong Run</h1>
+</head>
 <body>
-<a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
- <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
-<p> This is where I talk about my current research and my research interest. My current interests include
+<h1 style="display: inline;">Sythong Run</h1>
+
+<style>
+    .menu{
+        float: right;
+        font-family: verdana;  
+    }
+</style>
+    <div class="menu">
+        <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
+        <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
+    </div>
+
+ <p> This is where I talk about my current research and my research interest. My current interests include
 sexual health, sexuality, disabilities, and waterborne illnesses.
 </p>
 
