Remove button menu, flex block menu aligned to right of page

--- a/Personal_Blog.html
+++ b/Personal_Blog.html
@@ -35,8 +35,7 @@
     </ul>
 </nav>
 
- <p> This is where I talk about my current research and my research interest. My current interests include
-sexual health, sexuality, disabilities, and waterborne illnesses.
+<p> Personal blog. life updates. 
 </p>
 
 </body>
