--- a/About_Me.html
+++ b/About_Me.html
@@ -4,7 +4,7 @@
 <title>Sythong Run</title>
 </head>
 <body>
-
+    
 <h1>Sythong Run</h1>
     <style>
     .h1{
@@ -35,8 +35,10 @@
     </ul>
 </nav>
 
- <p> This is where I talk about my current research and my research interest. My current interests include
-sexual health, sexuality, disabilities, and waterborne illnesses.
+<p>Hello this is my introduction page. You will learn a few things about me and my website.
+The research tab features my current research and research interest. Reviews is where I discuss
+books I've read and podcast I've listened to. And Personal blog is where I will take you on my
+journey as a grad student at Syracuse University. Welcome to my mock webstie! :)
 </p>
 
 </body>
