--- a/Reviews.html
+++ b/Reviews.html
@@ -4,18 +4,37 @@
 <title>Sythong Run</title>
 </head>
 <body>
-<h1 style="display: inline;">Sythong Run</h1>
+
+<h1>Sythong Run</h1>
+    <style>
+    .h1{
+        display: inline-block;
+        margin: 0;
+    }
+    </style>
 
 <style>
     .menu{
-        float: right;
-        font-family: verdana;  
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        list-style: none;
+        margin: 0;
+        margin-left: 50em;
     }
+    
+
 </style>
-    <div class="menu">
-        <a href="About Me.html"> <button>Home</button></a> <a href="Research.html"><button>Research</button></a>
-        <a href="Reviews.html"> <button>Reviews</button></a> <a href="Personal Blog.html"> <button>Personal Blog</button></a>
-    </div>
+
+<nav class="navigation">
+    <ul class="menu">
+        <li><a href="About_Me.html">Home</a></li>
+        <li><a href="Research.html">Research</a></li>
+        <li><a href="Reviews.html">Reviews</a></li>
+        <li><a href="Personal_Blog.html">Personal Blog</a></li>
+    </ul>
+</nav>
+
 <p> Books and podcasts reviews go here.
 </p>
 
