wrap menu and title in section tag

--- a/About_Me.html
+++ b/About_Me.html
@@ -23,17 +23,19 @@
 </head>
 <body>
 
-<h1>Sythong Run</h1>
+    <section id="site-header">
+        <h1>Sythong Run</h1>
 
 
-<nav class="navigation">
-    <ul class="menu">
-        <li><a href="About_Me.html">Home</a></li>
-        <li><a href="Research.html">Research</a></li>
-        <li><a href="Reviews.html">Reviews</a></li>
-        <li><a href="Personal_Blog.html">Personal Blog</a></li>
-    </ul>
-</nav>
+        <nav class="navigation">
+            <ul class="menu">
+                <li><a href="About_Me.html">Home</a></li>
+                <li><a href="Research.html">Research</a></li>
+                <li><a href="Reviews.html">Reviews</a></li>
+                <li><a href="Personal_Blog.html">Personal Blog</a></li>
+            </ul>
+        </nav>
+    </section>
 
 <p>Hello this is my introduction page. You will learn a few things about me and my website.
 The research tab features my current research and research interest. Reviews is where I discuss
