flexbox menu on same line as title

--- a/About_Me.html
+++ b/About_Me.html
@@ -4,13 +4,19 @@
 <title>Sythong Run</title>
 
 <style>
+
+    section#site-header {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
     .menu{
         display: flex;
         justify-content: space-around;
         flex-direction: row;
         list-style: none;
         margin: 0;
-        margin-left: 50em;
     }
 
     .h1{
