adding spacing between menu items

--- a/About_Me.html
+++ b/About_Me.html
@@ -19,6 +19,10 @@
         margin: 0;
     }
 
+    .menu li {
+        margin: 0 1em;
+    }
+
     h1{
         display: inline-block;
         margin: 0;
