--- a/About_Me.html
+++ b/About_Me.html
@@ -17,10 +17,11 @@
         flex-direction: row;
         list-style: none;
         margin: 0;
+        height: 100%;
     }
 
     .menu li {
-        margin: 0 1em;
+        margin: auto 1em;
     }
 
     h1{
