fixed typo on about me page

--- a/About_Me.html
+++ b/About_Me.html
@@ -51,7 +51,7 @@
 <p>Hello this is my introduction page. You will learn a few things about me and my website.
 The research tab features my current research and research interest. Reviews is where I discuss
 books I've read and podcast I've listened to. And Personal blog is where I will take you on my
-journey as a grad student at Syracuse University. Welcome to my mock webstie! :)
+journey as a grad student at Syracuse University. Welcome to my mock website! :)
 </p>
 
 </body>
