--- a/About_Me.html
+++ b/About_Me.html
@@ -1,42 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Sythong Run</title>
-
-<style>
-
-    section#site-header {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-    }
-
-    .menu{
-        display: flex;
-        justify-content: space-around;
-        flex-direction: row;
-        list-style: none;
-        margin: 0;
-        height: 100%;
-    }
-
-    .menu li {
-        margin: auto 1em;
-    }
-
-    h1{
-        display: inline-block;
-        margin: 0;
-    }
-    
-
-</style>
+    <link rel="stylesheet" href="Menu_Styling.css">
+    <title>Sythong Run</title>
 </head>
+
 <body>
 
     <section id="site-header">
         <h1>Sythong Run</h1>
-
 
         <nav class="navigation">
             <ul class="menu">
