--- a/About_Me.html
+++ b/About_Me.html
@@ -6,19 +6,13 @@
 </head>
 
 <body>
-
-    <section id="site-header">
-        <h1>Sythong Run</h1>
-
-        <nav class="navigation">
-            <ul class="menu">
-                <li><a href="About_Me.html">Home</a></li>
-                <li><a href="Research.html">Research</a></li>
-                <li><a href="Reviews.html">Reviews</a></li>
-                <li><a href="Personal_Blog.html">Personal Blog</a></li>
-            </ul>
-        </nav>
-    </section>
+    <nav id="name-menu">
+        <h1 class="name">Sythong Run</h1>  
+        <nav class="menu-item"><a href="About_Me.html">Home</a></nav>
+        <nav class="menu-item"><a href="Research.html">Research</a></nav>
+        <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
+        <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
+    </nav>
 
 <p>Hello this is my introduction page. You will learn a few things about me and my website.
 The research tab features my current research and research interest. Reviews is where I discuss
