--- a/Research.html
+++ b/Research.html
@@ -2,38 +2,19 @@
 <html>
 <head>
 <title>Sythong Run</title>
+<head>
+    <link rel="stylesheet" href="Menu_Styling.css">
+    <title>Sythong Run</title>
 </head>
+
 <body>
-
-<h1>Sythong Run</h1>
-    <style>
-    .h1{
-        display: inline-block;
-        margin: 0;
-    }
-    </style>
-
-<style>
-    .menu{
-        display: flex;
-        justify-content: space-around;
-        flex-direction: row;
-        list-style: none;
-        margin: 0;
-        margin-left: 50em;
-    }
-    
-
-</style>
-
-<nav class="navigation">
-    <ul class="menu">
-        <li><a href="About_Me.html">Home</a></li>
-        <li><a href="Research.html">Research</a></li>
-        <li><a href="Reviews.html">Reviews</a></li>
-        <li><a href="Personal_Blog.html">Personal Blog</a></li>
-    </ul>
-</nav>
+    <nav id="name-menu">
+        <h1 class="name">Sythong Run</h1>  
+        <nav class="menu-item"><a href="About_Me.html">Home</a></nav>
+        <nav class="menu-item"><a href="Research.html">Research</a></nav>
+        <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
+        <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
+    </nav>
 
  <p> This is where I talk about my current research and my research interest. My current interests include
 sexual health, sexuality, disabilities, and waterborne illnesses.
