setting view port
 for responsive web design

--- a/About_Me.html
+++ b/About_Me.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="Menu_Styling.css">
     <title>Sythong Run</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
