added static footer with linkedin link

--- a/About_Me.html
+++ b/About_Me.html
@@ -21,5 +21,8 @@ books I've read and podcast I've listened to. And Personal blog is where I will 
 journey as a grad student at Syracuse University. Welcome to my mock website! :)
 </p>
 
+<footer>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+</footer>
 </body>
 </html>
