sticky footer. set menu, main, and footer height using vh unit. create main tag to box content

--- a/Personal_Blog.html
+++ b/Personal_Blog.html
@@ -16,9 +16,13 @@
         <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
         <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
     </nav>
+<main>
+    <p> Personal blog. life updates. 
+    </p>
+</main>
 
-<p> Personal blog. life updates. 
-</p>
-
+<footer>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+</footer>
 </body>
 </html>
