--- a/Research.html
+++ b/Research.html
@@ -15,10 +15,16 @@
         <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
         <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
     </nav>
+<main>
+    <p> 
+        This is where I talk about my current research and my research interest. My current interests include
+        sexual health, sexuality, disabilities, and waterborne illnesses.
+    </p>
+</main>
 
- <p> This is where I talk about my current research and my research interest. My current interests include
-sexual health, sexuality, disabilities, and waterborne illnesses.
-</p>
 
+<footer>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+</footer>
 </body>
 </html>
