--- a/Reviews.html
+++ b/Reviews.html
@@ -16,8 +16,14 @@
         <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
     </nav>
 
-<p> Books and podcasts reviews go here.
-</p>
+<main>
+    <p> Books and podcasts reviews go here.
+    </p>
+</main>
 
+
+<footer>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+</footer>
 </body>
 </html>
