--- a/About_Me.html
+++ b/About_Me.html
@@ -14,12 +14,14 @@
         <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
         <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
     </nav>
-
-<p>Hello this is my introduction page. You will learn a few things about me and my website.
-The research tab features my current research and research interest. Reviews is where I discuss
-books I've read and podcast I've listened to. And Personal blog is where I will take you on my
-journey as a grad student at Syracuse University. Welcome to my mock website! :)
-</p>
+<main>
+    <p>
+    Hello this is my introduction page. You will learn a few things about me and my website.
+    The research tab features my current research and research interest. Reviews is where I discuss
+    books I've read and podcast I've listened to. And Personal blog is where I will take you on my
+    journey as a grad student at Syracuse University. Welcome to my mock website! :)
+    </p>
+</main>
 
 <footer>
     <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
