naming & photo convention
also split css into two for mobile and pc

--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Sythong Run</title>
+
 <head>
     <link rel="stylesheet" href="/asset/mobile_style.css">
     <link rel="stylesheet" href="/asset/pc_style.css">
@@ -17,12 +18,9 @@
         <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
     </nav>
 <main>
-    <p> 
-        This is where I talk about my current research and my research interest. My current interests include
-        sexual health, sexuality, disabilities, and waterborne illnesses.
+    <p> Personal blog. life updates. 
     </p>
 </main>
-
 
 <footer>
     <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
