--- a/Reviews.html
+++ b/Reviews.html
@@ -3,17 +3,18 @@
 <head>
 <title>Sythong Run</title>
 <head>
-    <link rel="stylesheet" href="Menu_Styling.css">
+    <link rel="stylesheet" href="/asset/mobile_style.css">
+    <link rel="stylesheet" href="/asset/pc_style.css">
     <title>Sythong Run</title>
 </head>
 
 <body>
     <nav id="name-menu">
         <h1 class="name">Sythong Run</h1>  
-        <nav class="menu-item"><a href="About_Me.html">Home</a></nav>
-        <nav class="menu-item"><a href="Research.html">Research</a></nav>
-        <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
-        <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
+        <nav class="menu-item"><a href="index.html">Home</a></nav>
+        <nav class="menu-item"><a href="research.html">Research</a></nav>
+        <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
+        <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
     </nav>
 
 <main>
@@ -23,7 +24,7 @@
 
 
 <footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
 </footer>
 </body>
 </html>
