--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Menu_Styling.css">
+    <link rel="stylesheet" href="/asset/mobile_style.css">
+    <link rel="stylesheet" href="/asset/pc_style.css">
     <title>Sythong Run</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -9,10 +10,10 @@
 <body>
     <nav id="name-menu">
         <h1 class="name">Sythong Run</h1>  
-        <nav class="menu-item"><a href="About_Me.html">Home</a></nav>
-        <nav class="menu-item"><a href="Research.html">Research</a></nav>
-        <nav class="menu-item"><a href="Reviews.html">Reviews</a></nav>
-        <nav class="menu-item"><a href="Personal_Blog.html">Personal Blog</a></nav>  
+        <nav class="menu-item"><a href="index.html">Home</a></nav>
+        <nav class="menu-item"><a href="research.html">Research</a></nav>
+        <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
+        <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
     </nav>
 <main>
     <p>
@@ -24,7 +25,7 @@
 </main>
 
 <footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="linkedIn_logo.png" alt="LinkedIn logo"></a>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
 </footer>
 </body>
 </html>
