fixing file path, so it works

--- a/Reviews.html
+++ b/Reviews.html
@@ -3,8 +3,8 @@
 <head>
 <title>Sythong Run</title>
 <head>
-    <link rel="stylesheet" href="/asset/mobile_style.css">
-    <link rel="stylesheet" href="/asset/pc_style.css">
+    <link rel="stylesheet" href="asset/mobile_style.css">
+    <link rel="stylesheet" href="asset/pc_style.css">
     <title>Sythong Run</title>
 </head>
 
@@ -24,7 +24,7 @@
 
 
 <footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
 </footer>
 </body>
 </html>
