--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
 <title>Sythong Run</title>
 
 <head>
-    <link rel="stylesheet" href="/asset/mobile_style.css">
-    <link rel="stylesheet" href="/asset/pc_style.css">
+    <link rel="stylesheet" href="asset/mobile_style.css">
+    <link rel="stylesheet" href="asset/pc_style.css">
     <title>Sythong Run</title>
 </head>
 
@@ -23,7 +23,7 @@
 </main>
 
 <footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
 </footer>
 </body>
 </html>
