--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/asset/mobile_style.css">
-    <link rel="stylesheet" href="/asset/pc_style.css">
+    <link rel="stylesheet" href="asset/mobile_style.css">
+    <link rel="stylesheet" href="asset/pc_style.css">
     <title>Sythong Run</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -25,7 +25,7 @@
 </main>
 
 <footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="/asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
 </footer>
 </body>
 </html>
