added about me page
set font. reconfigure sticky footer. min main height solve sticky footer. display works on small and big screen.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
     </nav>
 <main>
-    <p>
-    Hello this is my introduction page. You will learn a few things about me and my website.
-    The research tab features my current research and research interest. Reviews is where I discuss
-    books I've read and podcast I've listened to. And Personal blog is where I will take you on my
-    journey as a grad student at Syracuse University. Welcome to my mock website! :)
-    </p>
+    <div id="about">
+        <img class = "about-img" src="asset/photos/sythong_about_me.jpeg" alt="Girl holding two icicles against her head, near her ears.">
+    </div>
+        <p class="about-text">
+            Hello and welcome! My name is Sythong (see-tong), was that simpler than you expected?! I am from the northwestern side of Cambodia, not too far away from the Thai border, which explains my name. Fellow Khmer speakers, if you think my name sounds funny that's because my name is not Khmer, it's Thai meaning "golden" or "color of gold." I am passionate about medical anthropology, understanding how culture and social structure influence health practices and outcomes. I am currently pursuing a graduate degree in anthropology at Syracuse University (SU). In my free time, I like to read, go on walks/hikes, take photos of plants and insects, learn something new, and catch up with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
+        </p>
+            About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Personal Blog is where I will take you on my journey as a grad student at SU. 
+        </p>
+    </div>
 </main>
 
 <footer>
