--- a/blog.html
+++ b/blog.html
@@ -22,8 +22,10 @@
     </p>
 </main>
 
-<footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+<footer id="footer">
+    <div> 
+        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    </div>
 </footer>
 </body>
 </html>
