--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </div>
 </main>
 
-<footer>
-    <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+<footer id="footer">
+    <div> 
+        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    </div>
 </footer>
 </body>
 </html>
