relinking new directory

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="asset/mobile_style.css">
-    <link rel="stylesheet" href="asset/pc_style.css">
+    <link rel="stylesheet" href="assets/mobile_style.css">
+    <link rel="stylesheet" href="assets/pc_style.css">
     <title>Sythong Run</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -17,7 +17,7 @@
     </nav>
 <main>
     <div id="about">
-        <img class = "about-img" src="asset/photos/sythong_about_me.jpeg" alt="Girl holding two icicles against her head, near her ears.">
+        <img class = "about-img" src="assets/photos/sythong_about_me.jpeg" alt="Girl holding two icicles against her head, near her ears.">
     </div>
         <p class="about-text">
             Hello and welcome! My name is Sythong (see-tong), was that simpler than you expected?! I am from the northwestern side of Cambodia, not too far away from the Thai border, which explains my name. Fellow Khmer speakers, if you think my name sounds funny that's because my name is not Khmer, it's Thai meaning "golden" or "color of gold." I am passionate about medical anthropology, understanding how culture and social structure influence health practices and outcomes. I am currently pursuing a graduate degree in anthropology at Syracuse University (SU). In my free time, I like to read, go on walks/hikes, take photos of plants and insects, learn something new, and catch up with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
@@ -29,7 +29,7 @@
 
 <footer id="footer">
     <div> 
-        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
     </div>
 </footer>
 </body>
