--- a/research.html
+++ b/research.html
@@ -3,8 +3,8 @@
 <head>
 <title>Sythong Run</title>
 <head>
-    <link rel="stylesheet" href="asset/mobile_style.css">
-    <link rel="stylesheet" href="asset/pc_style.css">
+    <link rel="stylesheet" href="assets/mobile_style.css">
+    <link rel="stylesheet" href="assets/pc_style.css">
     <title>Sythong Run</title>
 </head>
 
@@ -25,7 +25,7 @@
 
 <footer id="footer">
     <div> 
-        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
     </div>
 </footer>
 </body>
