--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
 <title>Sythong Run</title>
 
 <head>
-    <link rel="stylesheet" href="asset/mobile_style.css">
-    <link rel="stylesheet" href="asset/pc_style.css">
+    <link rel="stylesheet" href="assets/mobile_style.css">
+    <link rel="stylesheet" href="assets/pc_style.css">
     <title>Sythong Run</title>
 </head>
 
@@ -24,7 +24,7 @@
 
 <footer id="footer">
     <div> 
-        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="asset/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
     </div>
 </footer>
 </body>
