format review post

--- a/reviews.html
+++ b/reviews.html
@@ -29,9 +29,9 @@
         </br> 
             1. "First They Killed My Father" movie directed by Angelina Jolie. It is based on a memoir, portraying the experience of the tragedy from a five-year-old girl's perspective.
         </br> 
-            2. "Don't Think I've Forgotten" documentary directed by John Pirozzi. This explores Khmer Rouge through the lens of music.
+            2. "Don't Think I've Forgotten" documentary directed by John Pirozzi. This explores Khmer Rouge through the lens of music. Or
         </br> 
-            or 3. "The magic of Khmer classical dance" Ted Talk by Prumsodun Ok. This talk discusses Cambodian culture and how the genocide almost swept it all away.
+            3. "The magic of Khmer classical dance" Ted Talk by Prumsodun Ok. This talk discusses Cambodian culture and how the genocide almost swept it all away.
         </p>
             This book reminds me to cherish and treasure the small things and moments in life. It also gave me the perspective of a Vietnamese Cambodian (an ethnic minority) during the atrocious period of Cambodia's history. In fear of being targeted, Chantha's family returned to their homeland in Vietnam. But how could a child call a place she never grew up in home? And as much as I'd like to tell you that Cambodia has a more positive view of ethnic Vietnamese, we unfortunately don't.
         </p>
