fix hmtl format, tags

--- a/research.html
+++ b/research.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Sythong Run</title>
-<head>
     <link rel="stylesheet" href="assets/mobile_style.css">
     <link rel="stylesheet" href="assets/pc_style.css">
-    <title>Sythong Run</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
