--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <img class = "about-img" src="assets/photos/sythong_about_me.jpeg" alt="Girl holding two icicles against her head, near her ears.">
     
         <p class="about-text">
-            Hello and welcome! My name is Sythong (see-tong), was that simpler than you expected?! I am from the northwestern side of Cambodia, not too far away from the Thai border, which explains my name. Fellow Khmer speakers, if you think my name sounds funny that's because my name is not Khmer, it's Thai meaning "golden" or "color of gold." I am passionate about medical anthropology, understanding how culture and social structure influence health practices and outcomes. I am currently pursuing a graduate degree in anthropology at Syracuse University (SU). In my free time, I like to read, go on walks/hikes, take photos of plants and insects, learn something new, and catch up with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
+            Hello and welcome! My name is Sythong (see-tong) I am passionate about making healthcare accessible to everyone. Currently, I am pursuing a graduate degree in anthropology while also exploring data science in my spare time. I enjoy reading, going on walks and hikes, photographing plants and insects, learning new things, and spending time with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
         </p>
         <p>
-            About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Personal Blog is where I will take you on my journey as a grad student at SU. 
+            About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Personal Blog is where I will take you on my journey. 
         </p>
     </div>
 </main>
