--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sythong Run</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="assets/mobile_style.css">
     <link rel="stylesheet" href="assets/pc_style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Sythong Run</title>
 </head>
 
 <body>
