--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Sythong Run</title>
     <link rel="stylesheet" href="assets/mobile_style.css">
     <link rel="stylesheet" href="assets/pc_style.css">
-    <title>Sythong Run</title>
 </head>
 
 <body>
-    <nav id="name-menu">
-        <h1 class="name">Sythong Run</h1>  
-        <nav class="menu-item"><a href="index.html">Home</a></nav>
-        <nav class="menu-item"><a href="research.html">Research</a></nav>
-        <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
-        <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
-    </nav>
+    <header>
+        <h1 class="name">Sythong Run</h1> 
+        <nav id="name-menu">
+            <h1 class="name">Sythong Run</h1>  
+            <nav class="menu-item"><a href="index.html">Home</a></nav>
+            <nav class="menu-item"><a href="research.html">Research</a></nav>
+            <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
+            <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
+        </nav>
+    </header>
 <main>
     <div id="about">
-        <img class = "about-img" src="assets/photos/sythong_about_me.jpeg" alt="Girl holding two icicles against her head, near her ears.">
+        <img class = "about-img" src="assets/photos/sythong_about_me.jpeg" alt="Sythong Run holding two icicles against her head.">
     
         <p class="about-text">
             Hello and welcome! My name is Sythong (see-tong) I am passionate about making healthcare accessible to everyone. Currently, I am pursuing a graduate degree in anthropology while also exploring data science in my spare time. I enjoy reading, going on walks and hikes, photographing plants and insects, learning new things, and spending time with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
