--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <h1 class="name">Sythong Run</h1> 
-        <nav id="name-menu"> 
-            <nav class="menu-item"><a href="index.html">Home</a></nav>
-            <nav class="menu-item"><a href="research.html">Research</a></nav>
-            <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
-            <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
+        <nav id="menu-items"> 
+            <div class="menu-home"><a href="index.html">Home</a></div>
+            <div class="menu-research"><a href="research.html">Research</a></div>
+            <div class="menu-reviews"><a href="reviews.html">Reviews</a></div>
+            <div class="menu-blog"><a href="blog.html">Personal Blog</a></div>  
         </nav>
     </header>
 <main>
