--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sythong Run</title>
-    <link rel="stylesheet" href="assets/mobile_style.css">
-    <link rel="stylesheet" href="assets/pc_style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
