nav bar ul, li -- styling

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 <body>
     <header>
-        <h1 class="name">Sythong Run</h1> 
-        <nav id="menu-items"> 
-            <div class="menu-home"><a href="index.html">Home</a></div>
-            <div class="menu-research"><a href="research.html">Research</a></div>
-            <div class="menu-reviews"><a href="reviews.html">Reviews</a></div>
-            <div class="menu-blog"><a href="blog.html">Personal Blog</a></div>  
+        <h1>Sythong Run</h1> 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="blog.html">Personal Blog</a></li>
+            </ul>
         </nav>
     </header>
 <main>
