completed float-box layout, across all tabs

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p class="about-text">
             Hello and welcome! My name is Sythong (see-tong) I am passionate about making healthcare accessible to everyone. Currently, I am pursuing a graduate degree in anthropology while also exploring data science in my spare time. I enjoy reading, going on walks and hikes, photographing plants and insects, learning new things, and spending time with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
         </p>
+        <p>&nbsp;</p>
         <p>
             About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Personal Blog is where I will take you on my journey. 
         </p>
@@ -34,7 +35,7 @@
 
 <footer id="footer">
     <div> 
-        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
     </div>
 </footer>
 </body>
