--- a/research.html
+++ b/research.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Sythong Run</title>
-    <link rel="stylesheet" href="assets/mobile_style.css">
-    <link rel="stylesheet" href="assets/pc_style.css">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Sythong Run</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-    <nav id="name-menu">
-        <h1 class="name">Sythong Run</h1>  
-        <nav class="menu-item"><a href="index.html">Home</a></nav>
-        <nav class="menu-item"><a href="research.html">Research</a></nav>
-        <nav class="menu-item"><a href="reviews.html">Reviews</a></nav>
-        <nav class="menu-item"><a href="blog.html">Personal Blog</a></nav>  
-    </nav>
+    <header>
+        <h1>Sythong Run</h1> 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="blog.html">Personal Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 <main>
     <p> 
         This is where I talk about my current research and my research interest. My current interests include
@@ -24,7 +28,7 @@
 
 <footer id="footer">
     <div> 
-        <a class="logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
     </div>
 </footer>
 </body>
