--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="blog.html">Personal Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
 <main>
-    <div id="about">
+    <article id="about">
         <img class = "about-img" src="assets/photos/sythong_about_me.jpeg" alt="Sythong Run holding two icicles against her head.">
     
         <p class="about-text">
@@ -28,15 +28,15 @@
         </p>
         <p>&nbsp;</p>
         <p>
-            About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Personal Blog is where I will take you on my journey. 
+            About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Blog is where I will take you on my journey. 
         </p>
-    </div>
+    </article>
 </main>
 
 <footer id="footer">
-    <div> 
-        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
-    </div>
+    <nav> 
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/" target="_blank"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    </nav>
 </footer>
 </body>
 </html>
