--- a/reviews.html
+++ b/reviews.html
@@ -15,18 +15,18 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="blog.html">Personal Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
 <main>
-    <div id="slow-noodles">
+    <article id="slow-noodles">
         <h3>Slow Noodles by Chantha Nguon</h3>
         <p>
             (Disclaimer: I am speaking on my experience and cannot speak for all Cambodians or the country.)
         </p>
         <p>
-            This book is a memoir of an incredibly strong woman who takes her reader through her childhood, her experience during the Khmer Rouge genocide, her time as a refugee in Thailand, and her calling for a purpose in life all while recalling recipes associated with the experience and emotions. Chantha and her husband, Dara Chan Kim created the Stung Treng Women’s Development Center to educate and help women lift themselves out of poverty. If you feel compelled, please check out their <a href=https://mekongblue.com>website</a> and consider supporting their work.
+            This book is a memoir of an incredibly strong woman who takes her reader through her childhood, her experience during the Khmer Rouge genocide, her time as a refugee in Thailand, and her calling for a purpose in life all while recalling recipes associated with the experience and emotions. Chantha and her husband, Dara Chan Kim created the Stung Treng Women’s Development Center to educate and help women lift themselves out of poverty. If you feel compelled, please check out their <a href=https://mekongblue.com target="_blank">website</a> and consider supporting their work.
         </p>
         <p>
             For those unfamiliar, the Khmer Rouge took place between 1975 and 1979 during political unrest in Cambodia. Khmer Rouge envisioned an agrarian utopia where the country would rebuild itself from year zero. Money and culture were abolished, and everyone was to become farmers and live as equals. In working towards their goal the Khmer Rouge killed an estimate of 1.2 to 2.8 million people, or 13 to 30 percent of the population. People faced execution because they were either educated, middle-class, or an ethnic minority—especially the Chinese, Vietnamese, and Cham. Those considered or were accused of being an enemy of the regime were "re-educated" at prisons and few made out alive. Those who were not murdered for their status died from either starvation, disease, or being overworked while at the labor camp, or as they fled (if they were not caught and executed). This is an oversimplified history. If you would like to learn more and prefer watching a video/documentary I would suggest the following:
@@ -55,13 +55,13 @@
         <p>
             I would recommend this book to anyone with a warning that this heavy book will pull your heartstrings in all directions. If you're Cambodian, I think this book offers a perspective of the war that could help you connect with and understand your family better. I would even encourage you to ask your elders about their childhood to learn more about them if you feel comfortable. Have you ever just thought that they know (mostly) about your entire life, but you can't say the same about them? You know what I learned not too long ago? In her teenage years, my mom was picked on for having monolids. That was the day I learned she has monolids. It's amazing how I haven't noticed that. For non-Cambodians, I think this provides a perspective of the Khmer Rogue period and knowledge of Cambodian cuisine, there are recipes in the book. This is not the most fun book, but it holds important history. 
         </p>
-    </div>
+    </article>
 </main>
 
 <footer id="footer">
-    <div> 
-        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
-    </div>
+    <nav> 
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/" target="_blank"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    </nav>
 </footer>
 </body>
 </html>
