--- a/research.html
+++ b/research.html
@@ -15,21 +15,23 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="research.html">Research</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="blog.html">Personal Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
 <main>
-    <p> 
-        This is where I talk about my current research and my research interest. My current interests include
-        sexual health, sexuality, disabilities, and waterborne illnesses.
-    </p>
+    <article>
+        <p> 
+            This is where I talk about my current research and my research interest. My current interests include
+            sexual health, sexuality, disabilities, and waterborne illnesses.
+        </p>
+    </article>
 </main>
 
 <footer id="footer">
-    <div> 
-        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
-    </div>
+    <nav> 
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/sythong-run/" target="_blank"><img src="assets/photos/linkedin_logo.png" alt="LinkedIn logo"></a>
+    </nav>
 </footer>
 </body>
 </html>
