add recent post page to index

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             About my website: the research tab features my current research and research interests. Reviews is where I discuss books I've read and podcasts I've listened to. Blog is where I will take you on my journey. 
         </p>
     </article>
+    <aside>
+        <na>
+            <h3>Recent Posts</h3>
+            
+        </na>
+    </aside>
 </main>
 
 <footer id="footer">
