dynamic main height--for all screen

--- a/reviews.html
+++ b/reviews.html
@@ -21,21 +21,20 @@
     </header>
 <main>
     <article id="slow-noodles">
+        <hr>
         <h3>Slow Noodles by Chantha Nguon</h3>
         <p>
             (Disclaimer: I am speaking on my experience and cannot speak for all Cambodians or the country.)
         </p>
         <p>
-            This book is a memoir of an incredibly strong woman who takes her reader through her childhood, her experience during the Khmer Rouge genocide, her time as a refugee in Thailand, and her calling for a purpose in life all while recalling recipes associated with the experience and emotions. Chantha and her husband, Dara Chan Kim created the Stung Treng Women’s Development Center to educate and help women lift themselves out of poverty. If you feel compelled, please check out their <a href=https://mekongblue.com target="_blank">website</a> and consider supporting their work.
+            This book is a memoir of Chantha Nguon who takes her reader through her childhood, her experience during the Khmer Rouge genocide, her time as a refugee in Thailand, and her calling for a purpose in life all while recalling recipes associated with the experience and emotions. Chantha and her husband, Dara Chan Kim created the Stung Treng Women’s Development Center to educate and help women lift themselves out of poverty. If you feel compelled, please check out their <a href=https://mekongblue.com target="_blank">website</a> and consider supporting their work.
         </p>
         <p>
             For those unfamiliar, the Khmer Rouge took place between 1975 and 1979 during political unrest in Cambodia. Khmer Rouge envisioned an agrarian utopia where the country would rebuild itself from year zero. Money and culture were abolished, and everyone was to become farmers and live as equals. In working towards their goal the Khmer Rouge killed an estimate of 1.2 to 2.8 million people, or 13 to 30 percent of the population. People faced execution because they were either educated, middle-class, or an ethnic minority—especially the Chinese, Vietnamese, and Cham. Those considered or were accused of being an enemy of the regime were "re-educated" at prisons and few made out alive. Those who were not murdered for their status died from either starvation, disease, or being overworked while at the labor camp, or as they fled (if they were not caught and executed). This is an oversimplified history. If you would like to learn more and prefer watching a video/documentary I would suggest the following:
-        <br> 
+        <p class="list">
             1. "First They Killed My Father" movie directed by Angelina Jolie. It is based on a memoir, portraying the experience of the tragedy from a five-year-old girl's perspective.
-        <br> 
-            2. "Don't Think I've Forgotten" documentary directed by John Pirozzi. This explores Khmer Rouge through the lens of music. Or
-        <br> 
-            3. "The magic of Khmer classical dance" Ted Talk by Prumsodun Ok. This talk discusses Cambodian culture and how the genocide almost swept it all away.
+            <br>2. "Don't Think I've Forgotten" documentary directed by John Pirozzi. This explores Khmer Rouge through the lens of music. You can the documentary on Internet Archive, <a href=https://archive.org/details/DontThinkIveForgottenPOne00393113094mp4h264aacd target="blank"> click here for part one</a> and <a href=https://archive.org/details/DontThinkIveForgottenPOne00dtihf393113095_mp4_h264_aac_hq target="blank">click here</a> for part two.
+            <br>3. <a href=https://www.youtube.com/watch?v=oEIYHTlbeLA target="blank">"The magic of Khmer classical dance" Ted Talk by Prumsodun Ok. </a> This talk discusses Cambodian culture and how the genocide almost swept it all away.
         </p>
         <p>
             This book reminds me to cherish and treasure the small things and moments in life. It also gave me the perspective of a Vietnamese Cambodian (an ethnic minority) during the atrocious period of Cambodia's history. In fear of being targeted, Chantha's family returned to their homeland in Vietnam. But how could a child call a place she never grew up in home? And as much as I'd like to tell you that Cambodia has a more positive view of ethnic Vietnamese, we unfortunately don't.
