fixed pa tag, ol instead

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 <main>
     <article>
         <p>
-            Personal blog. life updates. 
+            This is where I share what I have been doing and share with you a snip of my life. 
         </p>
     </article>
 </main>
