--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="about-img" src="assets/photos/sythong_about_me.jpeg" alt="Sythong Run smiling at the camera, wearing round glasses and a black t-shirt paired with a black jacket. Her long black wavy hair flows freely down her shoulders, shielding her ears from the cold winter air.">
     
         <p>
-            Hello and welcome! My name is Sythong (see-tong) I am passionate about making healthcare accessible to everyone. Currently, I am pursuing a graduate degree in anthropology while also exploring data science in my spare time. I enjoy reading, going on walks and hikes, photographing plants and insects, learning new things, and spending time with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
+            Hello and welcome! My name is Sythong (see-tong) and I am passionate about making healthcare accessible to everyone. Currently, I am pursuing a graduate degree in anthropology while also exploring data science in my spare time. I enjoy reading, going on walks and hikes, photographing plants and insects, learning new things, and spending time with friends and family. My goal is to make a meaningful impact so if we can collaborate and make the world a better place, please connect with me on LinkedIn.
         </p>
     </article>
 </main>
