--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="review.html">Review</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
