--- a/project.html
+++ b/project.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="review.html">Review</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
@@ -22,7 +22,7 @@
 <main>
     <article>
         <p> 
-            This is where I talk about my current research and my research interest. My current interests include
+            This is where I talk about my current project, research, and my research interest. My current interests include
             sexual health, sexuality, disabilities, and waterborne illnesses.
         </p>
     </article>
