underline nav bar

--- a/review.html
+++ b/review.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Project</a></li>
-                <li><a href="review.html">Review</a></li>
+                <li><a href="review.html"><u>Review</u></a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
