--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="review.html">Review</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html"><u>Blog</u></a></li>
             </ul>
         </nav>
     </header>
