--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Sythong Run</h1> 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><u>Home</u></a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="review.html">Review</a></li>
                 <li><a href="blog.html">Blog</a></li>
