--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Project</a></li>
+                <li><a href="project.html"><u>Project</u></a></li>
                 <li><a href="review.html">Review</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
